crates/ars-components/src/specialized/image_cropper/snapshots/ars_components__specialized__image_cropper__tests__snapshot_crop_area_idle.snap
---
source: crates/ars-components/src/specialized/image_cropper/mod.rs
expression: "snapshot_attrs(&Fixture::default().api().crop_area_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "crop-area",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "image-cropper",
            ),
        ),
        (
            Class,
            String(
                "ars-touch-none",
            ),
        ),
        (
            Id,
            String(
                "cropper-crop-area",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [
        (
            Custom(
                "ars-crop-height",
            ),
            "0.8000",
        ),
        (
            Custom(
                "ars-crop-width",
            ),
            "0.8000",
        ),
        (
            Custom(
                "ars-crop-x",
            ),
            "0.1000",
        ),
        (
            Custom(
                "ars-crop-y",
            ),
            "0.1000",
        ),
    ],
}
