crates/ars-components/src/specialized/image_cropper/snapshots/ars_components__specialized__image_cropper__tests__snapshot_image_default.snap
---
source: crates/ars-components/src/specialized/image_cropper/mod.rs
expression: "snapshot_attrs(&Fixture::default().api().image_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "image",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "image-cropper",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "cropper-image",
            ),
        ),
        (
            Src,
            String(
                "photo.jpg",
            ),
        ),
    ],
    styles: [
        (
            Custom(
                "ars-crop-flip-x",
            ),
            "1",
        ),
        (
            Custom(
                "ars-crop-flip-y",
            ),
            "1",
        ),
        (
            Custom(
                "ars-crop-rotation",
            ),
            "0deg",
        ),
        (
            Custom(
                "ars-crop-zoom",
            ),
            "1",
        ),
    ],
}
