crates/ars-components/src/specialized/image_cropper/snapshots/ars_components__specialized__image_cropper__tests__snapshot_label.snap
---
source: crates/ars-components/src/specialized/image_cropper/mod.rs
expression: "snapshot_attrs(&Fixture::default().api().label_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "label",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "image-cropper",
            ),
        ),
        (
            Id,
            String(
                "cropper-label",
            ),
        ),
    ],
    styles: [],
}
